[package]
name = "rspack_plugin_javascript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_hash_set = "0.1.4"
rspack_core = { path = "../rspack-core"}
swc = "0.260.34"
swc_atoms = "0.5.3"
swc_common = "0.31.5"
swc_core = "0.75.34"
swc_ecma_ast = "0.103.5"
swc_ecma_parser = "0.133.11"
swc_ecma_transforms = "0.217.23"
swc_ecma_visit = "0.89.5"
tokio = "1.27.0"
# swc_ecma_ast = "0.79.0"                # Ecmascript ast.
# swc_ecma_visit = "0.65.0"          # Visitors for swc ecmascript nodes which works on stable rustc       # Common utilities for the swc project.
# swc_ecma_parser = "0.105.0"         # Feature-complete es2019 parser.
# swc_atoms = "0.2.11"    # Atoms for the swc project.
# swc_ecma_transforms = "0.158.0"                 # rust port of babel and closure compiler.
# tracing = "0.1.34"
# once_cell = "1"
# linked_hash_set = "0.1.4"
# anyhow = "1"
# typemap = "0.3.3"

